--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,10 @@ body {
 	flex-wrap: wrap;
 }
 
+.foreground-box-title {
+	width: 100%;
+}
+
 .editor {
 	font-size: 20px;
 }
@@ -220,7 +224,7 @@ body {
 }
 
 .style-choice {
-	width: 200px;
+	width: 220px;
 	font-size: 24px;
 	padding: 5px;
 }
@@ -258,6 +262,12 @@ body {
 	margin: 10px;
 	border-radius: 30px;
 	color: black;
+
+	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 3s; /* Firefox < 16 */
+      -ms-animation: fadein 3s; /* Internet Explorer */
+       -o-animation: fadein 3s; /* Opera < 12.1 */
+	      	animation: fadein 3s;
 }
 
 .color-blob {
