--- a/src/App.css
+++ b/src/App.css
@@ -240,10 +240,11 @@ body {
 	/*text-shadow: inset 0 30px 20px black;*/
 	/*text-shadow: 0 2px 2px rgba(255, 255, 255, 0.5),
 							 0 -2px 2px rgba(0, 0, 0, 0.2);*/
-	font-size: clamp(2rem, 8vw, 50px);
-	margin: 0px;
-	font-weight: 900;
+	font-size: 		clamp(2rem, 8vw, 50px);
+	margin: 		0px;
+	font-weight: 	900;
 	letter-spacing: 1.5vw;
+	text-indent: 	1.5vw;
 
 
 }
