--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ body {
 	padding: 10px;
 	width: calc(100% - 50px);
 	box-shadow: 0 30px 20px -20px rgba(0, 0, 0, 0.7),
-							0 0 10px 1px rgba(0, 0, 0, 0.5);
+				0 0 10px 1px rgba(0, 0, 0, 0.5);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -174,8 +174,14 @@ body {
 	margin: 10px;
 	margin-left: 15px;
 	margin-right: 15px;
-	box-shadow: 0 30px 20px -20px rgba(0, 0, 0, 0.7),
-							0 0 10px 1px rgba(0, 0, 0, 0.5);
+	/*box-shadow: 0 30px 	20px -20px  rgba(0, 0, 0, 0.7),
+	0 0    	10px 1px 	rgba(0, 0, 0, 0.5);*/
+	box-shadow: 10px 10px 	10px -5px  rgba(0, 0, 0, 0.7),
+				0 0    	10px 1px 	rgba(0, 0, 0, 0.5),
+
+				-2px -2px 15px 0px 		rgba(255, 255, 255, 0.3),
+				-1px -1px 4px 0px 	black,
+				inset 1px 1px 2px 1px 	var(--dark-surface-3);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -327,6 +333,7 @@ body {
 .orange {
 	background-color: #ff8800;
 }
+
 
 .gray1 {
 	background-color: var(--dark-surface-3);
