--- a/src/App.css
+++ b/src/App.css
@@ -177,11 +177,11 @@ body {
 	/*box-shadow: 0 30px 	20px -20px  rgba(0, 0, 0, 0.7),
 	0 0    	10px 1px 	rgba(0, 0, 0, 0.5);*/
 	box-shadow: 10px 10px 	10px -5px  rgba(0, 0, 0, 0.7),
-				0 0    	10px 1px 	rgba(0, 0, 0, 0.5),
+				0 0    	10px 1px 	rgba(0, 0, 0, 0.5)/*,
 
 				-2px -2px 15px 0px 		rgba(255, 255, 255, 0.3),
 				-1px -1px 5px 0px 	black,
-				inset 1px 1px 2px 1px 	var(--dark-surface-3);
+				inset 1px 1px 2px 1px 	var(--dark-surface-3)*/;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
