--- a/src/App.css
+++ b/src/App.css
@@ -299,6 +299,13 @@ body {
 							0 0 10px 1px rgba(0, 0, 0, 0.5);
 }
 
+.color-blob-half {
+	width: 15px;
+	background-color: rgba(0,0,0,0);
+	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0);
+	margin: 0px;
+}
+
 .yellow {
 	background-color: #ffff00;
 }
